# k32

./: .gitignore  Makefile  about.org  cleanup-svg.xsl  contact.org  index.html  k32.cabal  make-feed.el  org-convert.el  publish.el  site.hs  stack.yaml  tags.html
css/: default.css
drafts/: 2019-11-01-troubleshooting.org  2020-10-29-fault-injection.org
drafts-out/: default.css
posts/: 2019-10-11-hello-world.org  2019-11-01-troubleshooting.org  2020-12-01-acme-messenger.org  2021-02-12-just-do-it.org  2021-04-25-snabbkaffe-slides.org  2021-04-26-mnesia.org  draft-gnu-emacs.org  draft-wlog-replay.org  index.org  other.org  ниджу.org
static/: CNAME  default.css
templates/: default.html  post.html  tikz.tex
