name:                k32
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/k32#readme
-- license:             The Unlicense
-- license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable k32
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll,
                       data-default,
                       pandoc